--- a/app/javascript/front/teams.scss
+++ b/app/javascript/front/teams.scss
@@ -76,7 +76,7 @@
     padding: 14px;
     margin-top: 0px;
     margin-bottom: 0px;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid var(--gray);
 
     &:last-child {
       border-bottom: 0px;
