--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -71,6 +71,9 @@
     --opts-text-color: #6f6f6f;
     --opts-link-color: #f7f7f7a6;
     --opts-link-hover-background-color: #77787926;
+
+    --scrollbar-thumb-color: #4a4a4a;
+    --scrollbar-track-color: #3d3d3d;
   }
 
   pre {
